# LanDrop

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/: 编码规范.md  需求文档.md
resources/: icon.rc
src/: main.cpp
src/core/: device_info.h  discovery_service.cpp  discovery_service.h  file_receiver.cpp  file_receiver.h  file_sender.cpp  file_sender.h  protocol.cpp  protocol.h  protocol_constants.h  transfer_server.cpp  transfer_server.h
src/ui/: device_list_widget.cpp  device_list_widget.h  main_window.cpp  main_window.h  receive_dialog.cpp  receive_dialog.h
